# due-diligence-reporter

./: .env.example  .gitignore  AADP and DDR.mmd  Alpha_School_DD_Report_Template.docx  FRAMEWORK.md  HOW-IT-WORKS.md  Site_DD_Report_Template_V2.md  mypy.ini  prompt.md  prompt_v2.md  pyproject.toml  roadmap.md  setup.sh
.github/workflows/: daily-dd-check.yml  inbox-scan.yml  publish-to-mcp-hive.yml
docs/: 2026-03-10-doc-detection-and-oauth-fix.md
e-occupancy/: SKILL.md  scoring_matrix.json
school-approval/: SKILL.md
scripts/: daily_dd_check.py  generate_oauth_token.py  generate_v2_report.py  scan_inbox.py
src/: __init__.py
src/due_diligence_reporter/: __init__.py  classifier.py  config.py  google_client.py  inbox_scanner.py  report_pipeline.py  report_schema.py  server.py  utils.py  wrike.py
tests/: test_dd_output_fixes.py  test_hyperlinks.py  test_inbox_scanner.py  test_report_pipeline.py  test_report_schema.py  test_report_trace.py
